--- a/index.html
+++ b/index.html
@@ -1,64 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SIEVE Consultancy Services</title>
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
-
-
-
-</html>
-
 <body>
-    <div class="container">
-        <div class="title">Lets Talk</div>
-        <div class="content">
-            <form action="#">
-                <div class="user-details">
-                    <div class="input-box">
-                        <span class="details">Full Name</span>
-                        <input type="text" placeholder="Enter your name" required>
-                    </div>
-                    <div class="input-box">
-                        <span class="details">Email</span>
-                        <input type="email" placeholder="Enter your email" required>
-                    </div>
-                    <div class="input-box">
-                        <span class="details">Phone Number</span>
-                        <input type="tel" placeholder="Enter your number" required>
-                    </div>
-                    <div class="input-box">
-                        <span class="details">Locality</span>
-                        <input type="text" placeholder="Enter Your Locality" required>
-                    </div>
-                    <div class="input-box">
-                        <span class="details">Organization Name (if any)</span>
-                        <input type="text" placeholder="Enter your Organization Name.">
-                    </div>
-                    <div class="input-box">
-                        <span class="details">Mention Your Requirements</span>
-                        <!-- <input type="text" placeholder="Enter you Requirements" required> -->
-                        <textarea class="req" name="Requirements" rows="4" cols="17"
-                        required></textarea>
-                    </div>
 
+    <header class="header">
+        <nav class="navbar">
+            <a href="#" class="nav-logo">SCS</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#services" class="nav-link">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Why Us?</a>
+                </li>
+                <li class="nav-item">
+                    <a href="contact.html" class="nav-link">Contact</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+</header>
 
-                </div>
-                <div class="button">
-                    <input type="submit" value="Submit">
-                </div>
-            </form>
+<section class="intro">
+
+    <div class="main">
+    <h1 class="heading">SIEVE</h1>
+    <h1 class="heading">Consultency</h1>
+    <h1 class="heading">Services</h1>
+    </div>
+</section>
+<div class="strip">
+    <h1 class="main1">| What We Offer |</h1>
+    </div>
+<div class="services" id="services">
+
+    <div class="card">
+      <div class="card__inner" id="bookkeeping">
+        <div class="card__content card_content--front">
+          <h2 class="cardhead">Book Keeping</h2>
         </div>
+        <div class="card__content card__content--back">
+          <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui nemo voluptatum maiores libero, fuga reprehenderit quia ad molestiae nesciunt sit, quam esse, sint molestias.</p>
+        </div>
+      </div>
     </div>
 
-</body>
+    <div class="card">
+      <div class="card__inner" id="fte" >
+        <div class="card__content card_content--front">
+          <h2 class="cardhead">FTE Engagement</h2>
+        </div>
+        <div class="card__content card__content--back">
+          <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero ex enim est sed modi fugiat. Labore nisi qui quos nostrum est laudantium laboriosam perferendis!</p>
+        </div>
+      </div>
+    </div> 
 
-</html>
+    <div class="card">
+        <div class="card__inner" id="digital">
+          <div class="card__content card_content--front">
+            <h2 class="cardhead">Digitalization</h2>
+          </div>
+          <div class="card__content card__content--back">
+            <p class="description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad deserunt dolorum ab corrupti consectetur voluptate, temporibus nam recusandae saepe est modi provident similique obcaecati?
+            </p>
+          </div>
+        </div>
+      </div>
+
+    <div class="card">
+        <div class="card__inner" id="database">
+          <div class="card__content card_content--front">
+            <h2 class="cardhead">Database</h2>
+          </div>
+          <div class="card__content card__content--back">
+            <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas modi numquam, sapiente delectus expedita est. Eaque, in exercitationem facere laudantium repellendus excepturi odio eius.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__inner" id="analysis">
+          <div class="card__content card_content--front">
+            <h2 class="cardhead">Financial Analysis</h2>
+
+          </div>
+          <div class="card__content card__content--back">
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas cum magnam esse nostrum error culpa, deleniti suscipit inventore, quas accusamus hic dolores iusto quaerat.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__inner" id="report">
+          <div class="card__content card_content--front">
+            <h2 class="cardhead">Financial Reporting</h2>
+          </div>
+          <div class="card__content card__content--back">
+            <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam minima eius eligendi reprehenderit, molestias, necessitatibus sunt facere quis adipisci reiciendis magni nam accusamus. Omnis.</p>
+          </div>
+        </div>
+      </div>
+
+
+
+
+</div>
+<div class="whyus">
+<div class="about">
+  <h1>About us</h1>
+  
+  <p>SIEVE Consultancy Service (SIEVECS) is accounting firm belongs to India and having operations and clientele in USA, UK, CANADA and AUSTRALIA. 
+  </p>
+  <p>All the projects are undertaken and monitored by well qualified and highly experienced CPAs, CAs & ACCAs.
+  </p>
+  <p>
+    SIEVECS determined to deliver all services provided at most competitive and standard rates within given timelines promising ultimate satisfaction to our clients.
+
+  </p>
+  <p>
+    We SIEVECS is team of accounting professionals having several years of experience and knowledge of offshore services related to Accounts, Taxation, Payroll, Data processing and many other services strive for delivering values to clients. 
+
+  </p>
+</div>
+<div class="seperate">
+  <h1>What seperates us</h1>
+  <div class="vision">
+    <h3>Vision</h3>
+    <p>To become world’s most preferred Consultant, aim to thrive the professional and business for prosperities
+    </p>
+  </div>
+  <div class="mission">
+    <h3>Mission</h3>
+    <p>SIEVECS’s mission is to serve the society by understanding the needs and dynamics of industry and providing values with constant technological advancements 
+    </p>
+  </div>
+  <div class="qualities">
+    <h3>Qualities</h3>
+    <p>Professional & Experienced Staff 
+    </p>
+    <p>
+      Timely Reporting & Acknowledgements 
+    </p>
+    <p>
+      Tech Savvy
+    </p>
+    <p>
+      Customization And Flexibility
+    </p>
+    <p>
+      Standard And Competetive Rates
+    </p>
+  </div>
+</div>
+
+
+</div>
+
+
+
+</body>
+<script>
+    const hamburger = document.querySelector(".hamburger");
+const navMenu = document.querySelector(".nav-menu");
+
+hamburger.addEventListener("click", mobileMenu);
+
+function mobileMenu() {
+hamburger.classList.toggle("active");
+navMenu.classList.toggle("active");
+}
+const navLink = document.querySelectorAll(".nav-link");
+
+navLink.forEach(n => n.addEventListener("click", closeMenu));
+
+function closeMenu() {
+hamburger.classList.remove("active");
+navMenu.classList.remove("active");
+}
+</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  // Add smooth scrolling to all links
+  $("a").on('click', function(event) {
+
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function(){
+   
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+});
+</script>
+<script>
+  $(document).ready(function() {
+    var target = $(location).attr("hash");
+    var offset = ($(this).attr('data-offset') ? $(this).attr('data-offset') : 0);
+    $('body,html').animate({
+        scrollTop: $(target).offset().top - offset
+    }, 700);
+});
+</script>
+
+  
+    
+
+
+</html> 
